[package]
name = "cambio-torrefaction"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
directories = "6.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde-versioning = "1.0.215"
toml = "0.8.19"
sqlx = "0.8.2"
# open = "5.3.1"
iced = { git = "https://github.com/iced-rs/iced", features = ["svg", "image"] }
# iced_aw = { version = "0.11.0", default-features = false }
phidget = { git = "https://github.com/DaraJKong/phidget-rs.git" }
